syntax =  "proto3";
option java_package = "com.example.capitalization";

message CapitalizationRequest {
    string str =1;
}

message CapitalizationResponse {
    string str =1;
}


service CapitalizationService {
    rpc uppercase(CapitalizationRequest) returns (CapitalizationResponse);
    rpc lowercase(CapitalizationRequest) returns (CapitalizationResponse);
}
